<resources>
    <string name="app_name">COMP2000</string>
    <string name="EmployeeName">TextView</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="log_in_method">Log-in method:</string>
    <string name="employee">Employee</string>
    <string name="administrator">Administrator</string>
    <string name="photo">photo</string>
    <string name="employee_name">Employee Name</string>
    <string name="additional_settings">Additional settings</string>
    <string name="employee_details">Employee Details</string>
    <string name="employee_full_name">Employee Full Name</string>
    <string name="personal_details">personal details</string>
    <string name="full_address">Full Address</string>
    <string name="phone_number">Phone Number</string>
    <string name="full_name">Full Name</string>
    <string name="address">Address</string>
    <string name="phone">Phone number</string>
    <string name="request_holidays">request holidays</string>
    <string name="notifications">Notifications</string>
    <string name="employee_log_in">Employee Log-in</string>
    <string name="email">Email</string>
    <string name="pass">Pass.</string>
    <string name="submit">Submit</string>
    <string name="employee_email">Employee Email</string>
    <string name="employee_password">Employee Password</string>
    <string name="go_back">go back</string>
    <string name="photo2">photo</string>
    <string name="employee_name2">Employee Name</string>
    <string name="preferences">Preferences</string>
    <string name="enable_app_notifications">Enable App Notifications</string>
    <string name="go_back2">go back</string>
    <string name="additional_settings2">Additional Settings</string>
    <string name="note_employees_only_get_30_days_of_holidays_per_year">Note: Employees only get 30-Days of holidays per year</string>
    <string name="submit2">Submit</string>
    <string name="reset">Reset</string>
    <string name="dd_mm_yy">DD/MM/YY</string>
    <string name="dd_mm_yy2">DD/MM/YY</string>
    <string name="notifications2">Notifications</string>
    <string name="request_holidays2">request holidays</string>
    <string name="personal_details2">personal details</string>
    <string name="final_date">Final Date</string>
    <string name="initial_date">Initial Date</string>
    <string name="photo3">photo</string>
    <string name="employee_name3">Employee Name</string>
    <string name="additional_settings3">additional settings</string>
    <string name="request_holidays3">Request Holidays</string>
    <string name="notifications3">Notifications</string>
    <string name="no_new_notifications">No new notifications</string>
    <string name="personal_details3">personal details</string>
    <string name="request_holidays4">request holidays</string>
    <string name="notifications4">Notifications</string>
    <string name="clear_all">Clear All</string>
</resources>