<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/topSection"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="587dp"
        android:background="@android:color/holo_blue_light"
        android:padding="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="93dp"
            android:layout_height="93dp"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/photo3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@tools:sample/avatars" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="72dp"
            android:layout_marginEnd="68dp"
            android:text="@string/employee_name3"
            android:textColor="@android:color/white"
            android:textSize="28sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/imageButton7"
            android:layout_width="36dp"
            android:layout_height="31dp"
            android:layout_marginTop="6dp"
            android:layout_marginEnd="10dp"
            android:contentDescription="@string/additional_settings3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/baseline_dehaze_24" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="108dp"
        android:layout_marginTop="152dp"
        android:layout_marginEnd="102dp"
        android:text="@string/request_holidays3"
        android:textSize="26sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/textView3"
        android:layout_width="133dp"
        android:layout_height="44dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="256dp"
        android:text="@string/initial_date"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="133dp"
        android:layout_height="44dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="300dp"
        android:text="@string/final_date"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/imageButton3"
        android:layout_width="87dp"
        android:layout_height="86dp"
        android:layout_marginStart="29dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/personal_details2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/person" />

    <ImageButton
        android:id="@+id/imageButton4"
        android:layout_width="87dp"
        android:layout_height="86dp"
        android:layout_marginStart="162dp"
        android:layout_marginEnd="162dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/request_holidays2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/baseline_calendar_month_24" />

    <ImageButton
        android:id="@+id/imageButton5"
        android:layout_width="87dp"
        android:layout_height="86dp"
        android:layout_marginEnd="29dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/notifications2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/notifications" />

    <EditText
        android:id="@+id/editTextText"
        android:layout_width="134dp"
        android:layout_height="44dp"
        android:layout_marginTop="256dp"
        android:layout_marginEnd="52dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="text"
        android:text="@string/dd_mm_yy2"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="LabelFor" />

    <EditText
        android:id="@+id/editTextText2"
        android:layout_width="134dp"
        android:layout_height="44dp"
        android:layout_marginTop="300dp"
        android:layout_marginEnd="52dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="text"
        android:text="@string/dd_mm_yy"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="LabelFor" />

    <Button
        android:id="@+id/button"
        android:layout_width="139dp"
        android:layout_height="62dp"
        android:layout_marginStart="52dp"
        android:layout_marginBottom="304dp"
        android:text="@string/reset"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button2"
        android:layout_width="139dp"
        android:layout_height="62dp"
        android:layout_marginEnd="52dp"
        android:layout_marginBottom="304dp"
        android:text="@string/submit2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="11dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="280dp"
        android:text="@string/note_employees_only_get_30_days_of_holidays_per_year"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>